tests/valid/trait/assoc_projection_let_annotation_compat.facet
trait Iterator {
  type Item;
}

impl Iterator for unrestricted isize {
  type Item = isize;
}

fn main() -> unrestricted isize {
  let x: unrestricted <unrestricted isize as Iterator>::Item = 1;
  x
}
