tests/invalid/function/type_forall_fn_value_bound_trait_arity.facet
trait Convert<T>;

impl Convert<affine bool> for affine isize;

fn id<T>(x: affine T) -> affine T {
  x
}

fn main() -> affine isize {
  let f: unrestricted for<T> fn(affine T) -> affine T where T: Convert = id in
  (f 1)
}
